--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ group 'ts.tally.document_scanner'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.8.0'
+    ext.kotlin_version = '1.8.22'
     repositories {
         google()
         mavenCentral()
@@ -27,7 +27,7 @@ apply plugin: 'kotlin-android'
 android {
     namespace 'ts.tally.document_scanner'
 
-    compileSdk 33
+    compileSdk 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,6 +42,10 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     defaultConfig {
         minSdk 24
     }
@@ -49,6 +53,21 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation 'com.google.mlkit:vision-common:16.7.0'
     implementation 'com.google.android.gms:play-services-mlkit-document-scanner:16.0.0-beta1'
+
+    // Glide for image loading
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+
+    // Material Design Components (including Carousel)
+    implementation 'com.google.android.material:material:1.12.0'
+
+    // RecyclerView for carousel adapter
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+
+    // ConstraintLayout for layouts
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
 }
