--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: document_scanner
 description: A document scanner plugin for flutter. Scan and crop automatically on iOS and Android.
 version: 1.2.3
-homepage: https://cunning.biz
-repository: https://github.com/jachzen/cunning_document_scanner
+homepage: 
+repository: https://github.com/vivekkts/ts-document-scanner
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
